--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 Initial Add to Readme
 Initial Add to Readme
-Now Adding Something New
-Now Adding Something New 2
-Now Adding Something New 3
+Removed Stuff
